[package]
name = "tisu-memory"
version = "0.1.0"
authors = ["1363558876@qq.com <1363558876@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
tisu-sync = { path = "../tisu-sync/" }
# tisu-sync = { git = "https://github.com/TisuOS/tisu-sync" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
